--- a/src/main/resources/templates/listSongs.html
+++ b/src/main/resources/templates/listSongs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +7,9 @@
 </head>
 <body>
 <h1>Song List</h1>
-<div>
+<th:block>
   <a href="/songs/add">Add New Song</a>
-</div>
+</th:block>
 <div>
   <p th:text="${error}"></p>
   <table>
